fix table so that data aligns with their header

--- a/src/Stylesheets/Book.css
+++ b/src/Stylesheets/Book.css
@@ -1,4 +1,4 @@
-.btn1 {
+/* .btn1 {
     margin-right: 25px ;
     margin-left: 25px ;
 }
@@ -10,8 +10,8 @@
 
 td {
     height: 50px;
-    vertical-align: bottom;
+    vertical-align: middle;
     border: 1px solid #ddd;
     padding: 8px;
     
-  }
+  } */
